Resized text over images

--- a/code/style.css
+++ b/code/style.css
@@ -278,7 +278,7 @@ body {
   font-family: "Lexend Giga", sans-serif;
 }
 .title {
-  font-size: 45px;
+  font-size: 6vw;
 }
 
 .explanation {
@@ -319,7 +319,7 @@ body {
   }
 
   .title {
-    font-size: 25px;
+    font-size: 2.5vw;
   }
   .explanation {
     display: none;
@@ -368,7 +368,7 @@ body {
     color: white;
   }
   .title {
-    font-size: 25px;
+    font-size: 2.5vw;
   }
   .title:hover + .explanation {
     opacity: 1;
