--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,266 @@
-html {
-  background: #0025ff;
-  color: #fff;
+*   {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
+body      {
+  background-color: #e9e9e9;
+  font-family: 'Courier New', Courier, monospace, sans-serif;
+  font-size: 1rem;
+  color: #444444 
+}
+
+
+/* HEADER */
+
+header  {
+  height: 80px; 
+  display: flex;
+  align-items: center;
+  padding: 0 16px;
+}
+
+.hamburger  {
+  display: flex;
+  width: 30px;
+  height: 30px;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-right: 24px;
+}
+
+.hamburger  div {
+  width: 30px;
+  height: 5px;
+  background: black;
+  border-radius: 30%;
+}
+
+.logo {
+  width: 50px;
+  height: 50px;
+  margin: 0;
+  padding: 5px;
+  border-radius:50%;
+}
+
+nav a {
+  color: black;
+  text-decoration: none;
+  margin-left: 16px;
+  grid-area: nav;
+}
+
+
+/* NEWS CONTAINER */
+
+.news-container {
+  padding: 100px 16px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 1000px;
+  margin: 0 auto; 
+}
+
+.news-container img {
+  width: 100%;
+  border-radius: 50%;
+}
+
+.news-container div {
+  text-align: center;
+}
+
+
+/* SMALL POSTS */
+
+.post-wrap  {
+  min-width: 300px;
+  max-width: 380px;
+  height: 420px;
+  perspective: 1000px;
+  flex: 1;
+  margin: 0 15px 30px;
+}
+
+.post     {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 1s;
+  transform-style: preserve-3d;
+}
+
+.post-front, .post-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  backface-visibility: hidden;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px -1px rgba(0,0,0,0.1);
+}
+
+.post-back   {
+  transform: rotateY(180deg);
+}
+
+.post-wrap:hover  .post {
+  transform: rotateY(180deg);
+}
+
+.post-img   {
+  background-size: cover;
+  background-position: center;
+  height: 300px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.post-info  {
+  padding: 20px 30px 30px;
+}
+
+.post-info span   {
+  font-size: 0.8rem;
+  color: #808080;
+}
+
+.post-info h2   {
+  font-weight: bold;
+  font-size: 1.2rem;
+  padding-top: 5px;
+}
+
+.post-back  {
+  background-color: #ffffff;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.post-back h2   {
+  font-weight: bold;
+  font-size: 1.2rem;
+  padding-top: 5px;
+}
+
+.post-back p  {
+  margin-top: 10px;
+  line-height: 1.6;
+}
+
+.post-back a {
+  text-decoration: none;
+  color: #ffffff;
+  background-color: #5678ba;
+  padding: 10px 14px;
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
+  font-size: 0.8em;
+  font-weight: bold;
+  border-radius: 5px;
+}
+
+.container  {
+  max-width: 2000px;
+  margin: auto;
+  padding: 60px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
+}
+
+/* FOOTER */
+
+footer  {
+  padding: 5px; 
+}
+
+footer li {
+  display: inline-flex;
+  margin: 0;
+  padding: 0 10px;
+}
+
+footer ul {
+  display: flex;
+  justify-content: center;
+  margin-top: 34px;
+}
+
+footer a {
+  height: 25px;
+  line-height: 5px;
+  color: #ff00ff;
+  text-shadow: 2px 2px 5px #f80606;
+}
+
+
+/* MEDIA QUERIES */
+
+@media(max-width:650px) {
+  
+  .order-1 {
+    display: none;
+  }
+
+  .order-2 {
+    display: none;
+  }
+
+  .hamburger {
+    margin: 40px;
+  }
+
+  .container {
+    width: 400px;
+  }
+  
+}
+
+@media(min-width:650px) {
+  
+
+  header  {
+    justify-content: space-between;
+  }
+
+  nav {
+    display:inline-block;
+  }
+
+  .logo {
+    display:none;
+  }
+
+  .news-container div {
+    text-align: center;
+  }
+
+  .container {
+    width: 900px;
+  }
+}
+
+@media(min-width:900px) {
+  
+  .news-container {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .container {
+    width: 1500px;
+  }
 }
