Adjusted h2 font size for phone and tablet

--- a/code/style.css
+++ b/code/style.css
@@ -117,11 +117,14 @@ nav a:hover {
   .news {
     width: 46%;
   }
+  .news h2 {
+    font-size: 18px;
+  }
 }
 
 @media (max-width: 767px) {
   .news {
-    width: 75%;
+    width: 80%;
   }  
   .news h2 {
     font-size: 16px;
