--- a/code/style.css
+++ b/code/style.css
@@ -17,10 +17,7 @@ header {
 
 .logoIcon  {
   width: 140px;
-  margin-left: 30px;
-  margin-right: 50px;
-  margin-top: 20px;
-  margin-bottom: 30px;
+  margin: 20px 50px 30px 30px;
 }
 
 nav {
@@ -29,7 +26,7 @@ nav {
   justify-content: space-evenly;
   align-self: center;
 
-  font-family: 'Gill Sans';
+  font-family: 'Gill Sans', sans-serif;
   font-size: 20px;
 }
 
@@ -53,10 +50,7 @@ nav :hover {
   justify-content: space-around;
   align-self: center;
 
-  margin-left: 30px;
-  margin-right: 30px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin: 20px 30px 20px 30px;
 
 }
 
@@ -70,18 +64,18 @@ nav :hover {
 
 
 /* @MEDIA for header block */
-@media only screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
   nav {
     display: none;
   }
 }
 
-@media only screen and (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .hamburger {
     display: none;
   }
 }
-@media only screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
   nav {
     display: none;
   }
@@ -120,7 +114,7 @@ nav :hover {
 }
 
 /* @MEDIA for start picture block */
-@media only screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
   .ref {
       display: none;
     }
@@ -142,7 +136,7 @@ nav :hover {
 
 .big-arc h4 {
   padding-top: 20px;
-  font-family: 'Gill Sans';
+  font-family: 'Gill Sans', sans-serif;
   font-size: 48px;
 }
 
@@ -150,12 +144,12 @@ nav :hover {
   padding-top: 10px;
   padding-bottom: 20px;
   font-size: 30px;
-  font-family: 'Gill Sans';
+  font-family: 'Gill Sans', sans-serif;
   color: rgb(48, 48, 48);
 }
 
 /* @MEDIA for big news block */
-@media only screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
 
   .big-arc {
     margin: 15px;
@@ -182,7 +176,7 @@ nav :hover {
 }
 
 .autor {
-  font-family: 'Gill Sans';
+  font-family: 'Gill Sans', sans-serif;
   font-size: 48px;
   font-weight: 300;
   margin-top: 5px;
@@ -191,7 +185,7 @@ nav :hover {
 }
 
 .date {
-  font-family: 'Gill Sans';
+  font-family: 'Gill Sans', sans-serif;
   font-size: 30px;
   font-weight: 300;
   margin-top: 5px;
@@ -207,6 +201,7 @@ nav :hover {
   justify-content: center;
 
   margin-top: 90px;
+ 
 }
 
 .overview img {
@@ -235,12 +230,12 @@ nav :hover {
 .arc p {
   margin-top: 2px;
   margin-bottom: 5px;
-  font-family: 'Gill Sans';
+  font-family: 'Gill Sans', sans-serif;
   font-size: 15px;
 }
 
 .arc h4 {
-  font-family: 'Gill Sans';
+  font-family: 'Gill Sans', sans-serif;
   font-weight: 600;
   font-size: 25px;
   margin-top: 5px;
@@ -248,9 +243,11 @@ nav :hover {
 
 
 /* @MEDIA for small news block */
-@media only screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
   .overview {
-    margin-top: 20px
+    margin-top: 20px;
+    flex-direction: column;
+    justify-content: center;
   } 
   .start-text{
     margin-bottom: 0px;
@@ -263,8 +260,7 @@ nav :hover {
     font-size: 25px;
   }
   .arc {
-    margin-left: 5px;
-    margin-right: 5px;
+    margin: 0 auto;
   }
 }
 
@@ -280,7 +276,7 @@ footer {
 }
 
 footer p {
-  font-family: 'Gill Sans';
+  font-family: 'Gill Sans', sans-serif;
   color: #000;
   align-self: center;
 }
@@ -305,7 +301,7 @@ footer p {
 
 
 /* @MEDIA for footer block */
-@media only screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
   footer {
     flex-direction: column;
     height: 150px;
